fix: tables in dark mode styles

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -111,7 +111,7 @@ html[class~="dark"] .btn-primary {
 .hextra-card {
   border-radius: 0.29rem;
   position: relative;
-  color: inherit;
+  hugo s
 }
 .hextra-feature-card h3 {
   font-family: inherit; /* Ensures font family is inherited */
@@ -192,8 +192,6 @@ Allow inserting "steps" shortcode with h4 */
 }
 
 
-/* Tabs */
-
 
 /* -----------------------------------------------------
                Links styles
@@ -231,6 +229,12 @@ changing the style and adding an a arrow at the end of the text */
   text-decoration: none;
   color: inherit;
 }
+
+/* Enforce white color in dark mode for code blocks containing a link */ 
+html[class~="dark"] .content a:has(code){
+  color: #ececfe;
+}
+
 
 /* Display an arrow at the end of the linked variable */
 .content a:not(.code-block code) code::after {
@@ -281,7 +285,7 @@ html[class~="dark"] .content table:not(.code-block table) th {
   color: rgba(58, 56, 113, 1);
 }
 /* Text in cells for dark mode */
-html[class~="dark"] .hx-content table:not(.code-block table) tr {
+.content :where(table):not(:where(.hextra-code-block table, [class~=not-prose],[class~=not-prose] *)) td:is(html[class~="dark"] *) {
     color: #ececfe;
   }
 
